--- a/login.html
+++ b/login.html
@@ -12,7 +12,7 @@
 <h1>Login to your tool</h1>
 <div id="fb_login" >
     <label>User Name</label>
-    <input type="name" name="email" id="email" placeholder="Email Address" autofocus>
+    <input type="name" name="email" id="email" placeholder="User Name" autofocus>
     <label>Password</label>
     <input type="password" name="password" id="pwd" placeholder="Password">
     <button onclick="makeFbLogin()">Log In</button>
