--- a/todoList.html
+++ b/todoList.html
@@ -14,9 +14,15 @@
     <button id="submit" onclick="insertItem()">Submit</button>
 </div>
 <br/>
-    <br/> <br/>
-    <textarea id="myarea"></textarea>
-
+<br/> <br/>
+<textarea id="myarea"></textarea>
+<br/><br/>
+<div id="delete">
+    <label>Enter the Item ID to delete</label>
+    <input type="name" name="itemId" id="itemId" placeholder="Item ID to Delete">
+    <button onclick="deleteItem()">Delete Item</button>
+</div>
+<br/><br/><br/><br/><br/><br/>
 <div id="footer"></div>
 </body>
 </html>
